--- a/.github/workflows/playwright-tests.yml
+++ b/.github/workflows/playwright-tests.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        browser: [chromium, firefox, webkit]
+        browser: [chromium, firefox, webkit] # Playwright will use these browser projects
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -27,4 +27,4 @@ jobs:
         run: npm install
 
       - name: Run Playwright tests
-        run: npx playwright test --browser=${{ matrix.browser }}
+        run: npx playwright test # No --browser option, as we are using the projects defined in the Playwright config
