Update GitHub Actions to use Node.js 18

--- a/.github/workflows/playwright-tests.yml
+++ b/.github/workflows/playwright-tests.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '16'
+          node-version: '18' # Update to Node.js 18 as required by Playwright
 
       - name: Install dependencies
         run: npm install
