--- a/.github/workflows/playwright-tests.yml
+++ b/.github/workflows/playwright-tests.yml
@@ -21,10 +21,10 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '18' # Update to Node.js 18 as required by Playwright
+          node-version: '18'  # Update this to Node.js version 18 or higher
 
       - name: Install dependencies
         run: npm install
 
       - name: Run Playwright tests
-        run: npx playwright test # No --browser option, as we are using the projects defined in the Playwright config
+        run: npx playwright test  # Run tests without --browser as Playwright will use the matrix
