--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@playwright/test": "^1.47.2"
   },
   "dependencies": {
+    "dotenv": "^16.0.3",
+    "node-fetch": "^2.6.7",
     "playwright-course": "file:",
     "uuid": "^10.0.0"
   }
