--- a/.github/workflows/playwright-tests.yml
+++ b/.github/workflows/playwright-tests.yml
@@ -2,33 +2,27 @@ name: Playwright Tests
 
 on:
   push:
-    branches:
-      - main
-  pull_request:
-    branches:
-      - main
+    branches: [main]
 
 jobs:
-  test:
+  playwrighttests:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        browser: [chromium, firefox, webkit] # Playwright will use these browser projects
+    container:
+      image: mcr.microsoft.com/playwright:v1.29.1-focal
+
+    env:
+      ADMIN_PASSWORD: ${{ secrets.ADMIN_PASSWORD }}
+
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+    - name: Checkout repository
+      uses: actions/checkout@v2
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '18'
-
-      - name: Install dependencies
-        run: npm install
-
-      # Install the browsers required by Playwright
-      - name: Install Playwright browsers
-        run: npx playwright install
-
-      - name: Run Playwright tests
-        run: npx playwright test
+    - name: Run tests
+      run: |
+        echo "Start the shopping store application"
+        chmod +x ./shopping-store-linux-amd64
+        ./shopping-store-linux-amd64
+        echo "Install dependencies from lockfile"
+        npm ci
+        echo "Run Playwright tests"
+        npm run testci
