--- a/.github/workflows/playwright-tests.yml
+++ b/.github/workflows/playwright-tests.yml
@@ -26,6 +26,12 @@ jobs:
       with:
         node-version: '16'
 
+    # Add a step to install Google Chrome
+    - name: Install Google Chrome
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y google-chrome-stable
+
     - name: Install dependencies
       run: npm ci
 
@@ -38,7 +44,7 @@ jobs:
         NODE_ENV: production
 
     - name: Run Playwright tests
-      run: npx playwright test  # No need for the --headed flag
+      run: npx playwright test
       timeout-minutes: 10
       continue-on-error: false
 
@@ -51,6 +57,10 @@ jobs:
       with:
         name: playwright-report
         path: playwright-report
+
+    # Ensure correct permissions for the results.xml file
+    - name: Fix permissions for results.xml
+      run: sudo chmod 777 results.xml
 
     - name: Upload Test Results (JUnit)
       if: always()
