--- a/.github/workflows/playwright-tests.yml
+++ b/.github/workflows/playwright-tests.yml
@@ -26,11 +26,10 @@ jobs:
       with:
         node-version: '16'
 
-    # Add a step to install Google Chrome
     - name: Install Google Chrome
       run: |
         sudo apt-get update
-        sudo apt-get install -y google-chrome-stable
+        sudo apt-get install -y google-chrome-stable  # Install Google Chrome
 
     - name: Install dependencies
       run: npm ci
@@ -44,9 +43,7 @@ jobs:
         NODE_ENV: production
 
     - name: Run Playwright tests
-      run: npx playwright test
-      timeout-minutes: 10
-      continue-on-error: false
+      run: npx playwright test --timeout=60000  # Run the tests in headless mode
 
     - name: Generate Playwright report
       run: npx playwright show-report
@@ -58,7 +55,6 @@ jobs:
         name: playwright-report
         path: playwright-report
 
-    # Ensure correct permissions for the results.xml file
     - name: Fix permissions for results.xml
       run: sudo chmod 777 results.xml
 
