--- a/.github/workflows/playwright-tests.yml
+++ b/.github/workflows/playwright-tests.yml
@@ -26,10 +26,9 @@ jobs:
       with:
         node-version: '16'
 
-    - name: Install Google Chrome
+    - name: Install Playwright Browsers (including Chrome)
       run: |
-        sudo apt-get update
-        sudo apt-get install -y google-chrome-stable  # Install Google Chrome
+        npx playwright install --with-deps chrome  # Install necessary Playwright browsers including Chrome
 
     - name: Install dependencies
       run: npm ci
@@ -54,9 +53,6 @@ jobs:
       with:
         name: playwright-report
         path: playwright-report
-
-    - name: Fix permissions for results.xml
-      run: sudo chmod 777 results.xml
 
     - name: Upload Test Results (JUnit)
       if: always()
