--- a/.github/workflows/playwright-tests.yml
+++ b/.github/workflows/playwright-tests.yml
@@ -24,14 +24,13 @@ jobs:
     - name: Set up Node.js
       uses: actions/setup-node@v3
       with:
-        node-version: '16'
-
-    - name: Install Playwright Browsers (including Chrome)
-      run: |
-        npx playwright install --with-deps chrome  # Install necessary Playwright browsers including Chrome
+        node-version: '18'  # Updated to use Node.js 18
 
     - name: Install dependencies
-      run: npm ci
+      run: npm install
+
+    - name: Install Playwright browsers
+      run: npx playwright install --with-deps chrome
 
     - name: Start application
       run: |
@@ -49,14 +48,17 @@ jobs:
 
     - name: Upload Playwright report
       if: failure()
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4  # Updated to v4
       with:
         name: playwright-report
         path: playwright-report
 
+    - name: Fix permissions for results.xml
+      run: sudo chmod 777 results.xml
+
     - name: Upload Test Results (JUnit)
       if: always()
-      uses: actions/upload-artifact@v3
+      uses: actions/upload-artifact@v4  # Updated to v4
       with:
         name: test-results
         path: results.xml
