--- a/.github/workflows/playwright-tests.yml
+++ b/.github/workflows/playwright-tests.yml
@@ -35,7 +35,8 @@ jobs:
     - name: Start application
       run: |
         chmod +x ./shopping-store-linux-amd64
-        ./shopping-store-linux-amd64 &
+        ./shopping-store-linux-amd64 & # Starts the application in the background
+        npx wait-on http://localhost:2221 # Wait for the server to be ready
       timeout-minutes: 2
       env:
         NODE_ENV: production
