--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@playwright/test": "^1.29.1"
   },
   "dependencies": {
+    "axios": "^1.7.7",
     "dotenv": "^16.0.3",
     "node-fetch": "^2.6.7",
     "playwright-course": "file:",
