--- a/.github/workflows/playwright-tests.yml
+++ b/.github/workflows/playwright-tests.yml
@@ -29,6 +29,9 @@ jobs:
     - name: Install dependencies
       run: npm install
 
+    - name: Install wait-on
+      run: npm install wait-on --save-dev  # Ensures wait-on is installed
+
     - name: Start application
       run: |
         chmod +x ./shopping-store-linux-amd64
