--- a/.github/workflows/playwright-tests.yml
+++ b/.github/workflows/playwright-tests.yml
@@ -30,10 +30,7 @@ jobs:
       run: npm install
 
     - name: Install wait-on
-      run: npm install wait-on --save-dev  # Ensures wait-on is installed
-
-    - name: Install Playwright browsers
-      uses: microsoft/playwright-github-action@v1  # Use Playwright GitHub Action to install required browsers
+      run: npm install wait-on --save-dev  # Ensure wait-on is installed
 
     - name: Start application
       run: |
@@ -44,7 +41,7 @@ jobs:
         NODE_ENV: production
 
     - name: Wait for server to start
-      run: npx wait-on http://localhost:2221 && sleep 10  # Ensure the server is up, give an additional buffer
+      run: npx wait-on http://localhost:2221 && sleep 10  # Ensure the server is up and add some buffer
 
     - name: Check server health
       run: curl -f http://localhost:2221/health || exit 1  # Optional: Add server health check to ensure it's live
@@ -63,7 +60,7 @@ jobs:
         path: playwright-report
 
     - name: Fix permissions for results.xml
-      run: sudo chmod 777 results.xml
+      run: chmod 777 results.xml  # Remove 'sudo' from this line
 
     - name: Upload Test Results (JUnit)
       if: always()
