--- a/.github/workflows/playwright-tests.yml
+++ b/.github/workflows/playwright-tests.yml
@@ -49,10 +49,9 @@ jobs:
 
     - name: Start application
       run: |
-        chmod +x ./binaries/shopping-store-linux-amd64  # Corrected path
-        ./binaries/shopping-store-linux-amd64 &
+        chmod +x ./binaries/shopping-store-linux-amd64  # Corrected path to the binary inside repo
+        ./binaries/shopping-store-linux-amd64 &  # Start the binary
       timeout-minutes: 3
-    
       env:
         NODE_ENV: production
 
